--- a/index.html
+++ b/index.html
@@ -16,27 +16,13 @@
         </a>
 
         <div class="user-menu">
-          <div class="search-form">
-            <form classs="form" action="https://echo.htmlacademy.ru/" method="post">
-              <label for="search"></label>
-              <svg class="search" aria-hidden="true" focusable="false" width="16" height="17" fill="currentcolor"
-                xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#a)">
-                  <path
-                    d="m15.7 15-3.1-3.1c.9-1.2 1.4-2.6 1.4-4.2 0-3.9-3.1-7-7-7s-7 3.1-7 7 3.1 7 7 7c1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7.7c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5Z" />
-                </g>
-                <defs>
-                  <clipPath id="a">
-                    <path fill="#fff" transform="translate(0 .7)" d="M0 0h16v16H0z" />
-                  </clipPath>
-                </defs>
-              </svg>
-              <input type="search" name="search" id="search" placeholder="Поиск по сайту">
-
-
-              <button class="text page-header-button" type="submit"><span>Найти</span></button>
-            </form>
-          </div>
+          <!--  <div class="search-form">-->
+          <form classs="form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="search"></label>
+            <input type="search" name="search" id="search" placeholder="Поиск по сайту">
+            <button class="text page-header-button" type="submit"><span>Найти</span></button>
+          </form>
+          <!--</div>-->
 
           <ul class="user-list">
             <li class="user-item">
@@ -51,8 +37,8 @@
               </a>
             </li>
             <li class="user-item">
-              <a class="option option-1" href="#">
-                <span class="come-out">Выйти</span>
+              <a class="option option-1">
+                <span class="visually-hidden come-out">Выйти</span>
               </a>
             </li>
 
@@ -107,7 +93,9 @@
                 </svg>
 
 
-                <svg class="toggler toggler-minus" aria-hidden="true" focusable="false" width="50" height="51" viewBox="0 0 50 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+                <svg class="toggler toggler-minus" aria-hidden="true" focusable="false" width="50" height="51"
+                  viewBox="0 0 50 51" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M49 25.787C49 39.0418 38.2548 49.787 25 49.787C11.7452 49.787 1 39.0418 1 25.787C1 12.5322 11.7452 1.78699 25 1.78699C38.2548 1.78699 49 12.5322 49 25.787Z"
                     stroke="black" stroke-width="2" />
@@ -141,16 +129,18 @@
 
 
         <div class="promo-product-arrow">
-          <button class="arrow-prev" type="button">
+          <button class="arrow arrow-prev" type="button">
             <svg aria-hidden="true" focusable="false" width="20" height="60" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M20 60h-3.5L0 30 16.5 0H20L3.8 30 20 60Z" fill="#000" />
             </svg>
 
+
+
             <span class="visually-hidden">Предыдущее фото</span>
           </button>
-          <button class="arrow-next" type="button">
-            <svg aria-hidden="true" focusable="false" width="20" height="60" fill="none"
+          <button class="arrow arrow-next" type="button">
+           <svg aria-hidden="true" focusable="false" width="20" height="60" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M0 0h3.5L20 30 3.5 60H0l16.2-30L0 0Z" fill="#000" />
             </svg>
@@ -480,7 +470,6 @@
                 5,
                 литера П.</span>
             </address>
-            <div class="yellow"></div>
           </div>
 
           <div class="footer-center">
@@ -501,8 +490,8 @@
               <ul class="footer-social-list">
                 <li class="footer-social-item">
                   <a class="footer-social-button" href="https://t.me/htmlacademy">
-                    <svg aria-hidden="true" focusable="false" width="14" height="12" fill="#444"
-                      xmlns="http://www.w3.org/2000/svg">
+                    <svg class="social-icon" aria-hidden="true" focusable="false" width="14" height="12"
+                      fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M12.44.07.62 4.63c-.8.33-.8.78-.14.98l3.03.94 7.02-4.43c.33-.2.64-.09.39.13l-5.7 5.13-.2 3.13c.3 0 .44-.14.61-.3l1.48-1.44 3.06 2.27c.57.31.97.15 1.12-.53l2-9.48c.21-.83-.3-1.2-.85-.96Z"
                         fill="#444" />
@@ -512,7 +501,7 @@
                 </li>
                 <li class="footer-social-item">
                   <a class="footer-social-button" href=" https://www.youtube.com/user/htmlacademyru">
-                    <svg aria-hidden="true" focusable="false" width="16" height="11" fill="#444"
+                    <svg class="social-icon" aria-hidden="true" focusable="false" width="16" height="11" fill="#444"
                       xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M15.67 1.67c-.1-.32-.27-.61-.51-.84-.25-.24-.56-.41-.9-.5C13.01 0 8 0 8 0 5.9-.02 3.8.08 1.74.32 1.4.4 1.1.58.84.82c-.24.24-.42.53-.51.85A19.4 19.4 0 0 0 0 5.34C0 6.56.1 7.79.33 9c.09.32.27.61.51.85.25.23.56.4.9.5 1.27.32 6.26.32 6.26.32 2.09.02 4.18-.08 6.26-.31.34-.09.65-.26.9-.5.24-.23.42-.52.5-.84.24-1.21.35-2.44.34-3.67.02-1.23-.1-2.46-.33-3.68ZM6.4 7.62V3.05l4.18 2.29L6.4 7.62Z" />
@@ -522,7 +511,7 @@
                 </li>
                 <li class="footer-social-item">
                   <a class="footer-social-button" href="https://twitter.com/htmlacademy_ru">
-                    <svg class="social-icon" aria-hidden="true" focusable="false" width="15" height="15" fill="#444"
+                    <svg class="" aria-hidden="true" focusable="false" width="15" height="15" fill="#444"
                       xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M9.7.16c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4C1 5.26-.2 2.36.8.86c1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z" />
@@ -558,101 +547,3 @@
   </body>
 
 </html>
-
-<!--
-<footer class="page-footer">
-
-  <div class="container">
-    <div class="logo-footer">
-      <svg width="145" height="36" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M27.22 0v35.3h-7.6v-2.4c-1.7 1.9-4.1 3.1-7.51 3.1C5.5 36 0 30.2 0 22.7 0 15.2 5.5 9.4 12.1 9.4c3.41 0 5.91 1.2 7.51 3.1V0h7.6Zm-7.6 22.7c0-3.8-2.5-6.2-6.01-6.2-3.5 0-6 2.4-6 6.2 0 3.8 2.5 6.2 6 6.2 3.5-.1 6-2.4 6-6.2ZM43.73 29.2c2.1 0 3.8-.8 4.8-1.9l6.1 3.5c-2.5 3.4-6.2 5.2-11 5.2-8.6 0-14.01-5.8-14.01-13.3 0-7.5 5.4-13.3 13.41-13.3 7.4 0 12.8 5.7 12.8 13.3 0 1.1-.1 2.1-.3 3h-17.9c1 2.6 3.3 3.5 6.1 3.5Zm4.6-9.1c-.8-2.9-3.1-4-5.4-4-2.9 0-4.8 1.4-5.5 4h10.9ZM82.16 10.1l-9.31 25.2h-8.6l-9.31-25.2h8.4l5.3 16 5.31-16h8.2ZM83.46 10.1h7.6v25.2h-7.6V10.1ZM93.66 22.7c0-7.5 5.7-13.3 13.41-13.3 4.9 0 9.21 2.6 11.41 6.5l-6.6 3.8c-.9-1.8-2.7-2.8-4.9-2.8-3.3 0-5.71 2.4-5.71 5.8 0 3.5 2.4 5.8 5.7 5.8 2.2 0 4.1-1.1 4.9-2.8l6.61 3.8c-2.1 3.9-6.4 6.5-11.4 6.5-7.71 0-13.42-5.8-13.42-13.3ZM132.9 29.2c2.1 0 3.8-.8 4.8-1.9l6.1 3.5c-2.5 3.4-6.2 5.2-11 5.2-8.61 0-14.02-5.8-14.02-13.3 0-7.5 5.5-13.3 13.41-13.3 7.4 0 12.81 5.7 12.81 13.3 0 1.1-.1 2.1-.3 3h-17.91c1 2.6 3.3 3.5 6.1 3.5Zm4.7-9.1c-.8-2.9-3.1-4-5.4-4-2.91 0-4.81 1.4-5.51 4h10.9ZM83.46 0v10.1L91.06 0h-7.6Z"
-          fill="#FFC700" />
-      </svg>
-
-
-      <img class="footer-contacts-logo" src="images/logo-yellow.svg" width="145" height="36"
-      alt="Логотип интернет-магазина Device">
-
-    </div>
-    <div class="footer-contacts">
-      <div class="footer-contacts-1">
-        <address class="footer-contacts-address">
-          <span class="text text-address-footer">Санкт-Петербург, набережная реки Карповки,
-            5,
-            литера П.</span>
-        </address>
-        <svg width="80" height="7" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M80 0H0v7h80V0Z" fill="#FFC700" />
-        </svg>
-      </div>
-
-
-      <div class="footer-contacts-2">
-
-        <ul class="footer-navigation-list">
-          <li class="footer-navigation-item">
-            <a class="button button-footer" href="delivery.html">Доставка</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a class="button button-footer" href="guarantee.html">Гарантия</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a class="button button-footer" href="contacts.html">Контакты</a>
-          </li>
-        </ul>
-
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="footer-social-button" href="https://t.me/htmlacademy">
-              <svg width="14" height="12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M12.44.07.62 4.63c-.8.33-.8.78-.14.98l3.03.94 7.02-4.43c.33-.2.64-.09.39.13l-5.7 5.13-.2 3.13c.3 0 .44-.14.61-.3l1.48-1.44 3.06 2.27c.57.31.97.15 1.12-.53l2-9.48c.21-.83-.3-1.2-.85-.96Z"
-                  fill="#444" />
-              </svg>
-              <span class="visually-hidden">Telegram</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-social-button" href=" https://www.youtube.com/user/htmlacademyru">
-              <svg width="16" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M15.67 1.67c-.1-.32-.27-.61-.51-.84-.25-.24-.56-.41-.9-.5C13.01 0 8 0 8 0 5.9-.02 3.8.08 1.74.32 1.4.4 1.1.58.84.82c-.24.24-.42.53-.51.85A19.4 19.4 0 0 0 0 5.34C0 6.56.1 7.79.33 9c.09.32.27.61.51.85.25.23.56.4.9.5 1.27.32 6.26.32 6.26.32 2.09.02 4.18-.08 6.26-.31.34-.09.65-.26.9-.5.24-.23.42-.52.5-.84.24-1.21.35-2.44.34-3.67.02-1.23-.1-2.46-.33-3.68ZM6.4 7.62V3.05l4.18 2.29L6.4 7.62Z"
-                  fill="#444" />
-              </svg>
-              <span class="visually-hidden">Youtube</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-social-button" href="https://twitter.com/htmlacademy_ru">
-              <svg width="15" height="15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M9.7.16c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4C1 5.26-.2 2.36.8.86c1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z"
-                  fill="#444" />
-              </svg>
-              <span class="visually-hidden">Twitter</span>
-            </a>
-          </li>
-        </ul>
-
-
-      </div>
-
-      <div class="footer-contacts-3">
-        <address class="contacts-address">
-          <a class="text  text-phone text-phone-footer" href="tel:+78128121212">+7 812 812-12-12</a>
-        </address>
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <svg class="htmlacademy" width="115" height="33" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 17.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"
-              fill="#FFC700" />
-          </svg>
-
-          <img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотин HTML-академии">
-        </a>
-      </div>
-    </div>
-  </div>
-</footer>
-*/
