--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container page-header-container">
         <a class="logo" href="#">
           <img class="logo-image" src="images/logo-black.svg" width="145" height="36"
-            alt="Логотип интернет-магазина Device">
+            alt="Логотип интернет-магазина Device" .>
         </a>
 
         <div class="user-menu">
@@ -68,18 +68,66 @@
                 </svg>
                 <span class="basket">Корзина</span>
               </a>
+
+              <div class="popover popover-cart">
+                <div class="popover-content">
+                  <ul class="cart-items-list">
+                    <li class="cart-item">
+                      <img class="cart-item-image" src="images/product/product-1-small.png" width="39" height="43"
+                        alt="Любительская селфи-палка.">
+                      <span class="cart-item-name">Любительская <br> селфи-палка</span>
+                      <button type="button" class="cart-item-button button">
+                        <svg aria-hidden="true" focusable="false" width="10" height="11" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M10 1.07584 9.09091.166748 5 4.25766.909091.166748 0 1.07584l4.09091 4.09091L0 9.25766l.909091.90904L5 6.07584l4.09091 4.09086L10 9.25766 5.90909 5.16675 10 1.07584Z"
+                            fill="#fff" />
+                        </svg>
+                        <span class="visually-hidden">Удалить из корзины</span>
+                      </button>
+                    </li>
+
+                    <li class="cart-item">
+                      <img class="cart-item-image" src="images/product/product-2-small.png" width="39" height="43"
+                        alt="Профессиональная селфи-палка.">
+                      <span class="cart-item-name">Профессиональная <br> селфи-палка</span>
+                      <button type="button" class="cart-item-button button">
+                        <svg aria-hidden="true" focusable="false" width="10" height="11" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M10 1.07584 9.09091.166748 5 4.25766.909091.166748 0 1.07584l4.09091 4.09091L0 9.25766l.909091.90904L5 6.07584l4.09091 4.09086L10 9.25766 5.90909 5.16675 10 1.07584Z"
+                            fill="#fff" />
+                        </svg>
+                        <span class="visually-hidden">Удалить из корзины</span>
+                      </button>
+                    </li>
+                  </ul>
+                  <div class="cart-item-wrapper">
+                    <div class="cart-item-number">
+                      <span>Товаров:</span><span> 2</span>
+                    </div>
+                    <div class="cart-item-summa">
+                      <span>Сумма:</span> 2000 <span class="value">p</span>
+                    </div>
+                  </div>
+                  <button class="button popover-close-button" type="button"><span>Открыть корзину</span>
+                    <span class="visually-hidden">Открыть корзину</span>
+                  </button>
+                </div>
+              </div>
+
             </li>
           </ul>
         </div>
 
         <nav class="navigation-menu">
           <ul class="navigation-list">
-            <li class="navigation-item ">
+            <li class="navigation-item">
               <a class="catalog-toggler" href="product.html"><span>Каталог товаров</span>
                 <svg class=" toggler toggler-plus" aria-hidden="true" focusable="false" width="50" height="50"
                   viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle opacity="1" cx="25" cy="25" r="24" stroke="black" stroke-width="2" />
-                  <g opacity="1" clip-path="url(#clip0_31404_601)">
+                  <circle opacity="0.3" cx="25" cy="25" r="24" stroke="currentcolor" stroke-width="2" />
+                  <g opacity="0.3" clip-path="url(#clip0_31404_601)">
                     <path d="M33 24H26V17H24V24H17V26H24V33H26V26H33V24Z" fill="black" />
                   </g>
                   <defs>
@@ -95,7 +143,31 @@
                     stroke="black" stroke-width="2" />
                   <path d="M33 24.787H17V26.787H33V24.787Z" fill="black" />
                 </svg>
+
               </a>
+
+              <ul class="subcatalog">
+                <li class="subcatalog-item item-1">
+                  <a class="subcatalog-link" href=""><span>Виртуальная реальность</span></a>
+                </li>
+                <li class="subcatalog-item item-2">
+                  <a class="subcatalog-link" href=""><span>Моноподы для селфи</span></a>
+                </li>
+                <li class="subcatalog-item item-3">
+                  <a class="subcatalog-link" href=""><span>Экшн-камеры</span></a>
+                </li>
+                <li class="subcatalog-item item-4">
+                  <a class="subcatalog-link" href=""><span>Фитнес-браслеты</span></a>
+                </li>
+                <li class="subcatalog-item item-5">
+                  <a class="subcatalog-link" href=""><span>Умные часы</span></a>
+                </li>
+                <li class="subcatalog-item item-6">
+                  <a class="subcatalog-link" href=""><span>Квадрокоптеры</span></a>
+                </li>
+              </ul>
+
+
             </li>
             <li class="navigation-item ">
               <a class="navigation-link navigation-link-1" href="delivery.html"><span>Доставка</span></a>
@@ -135,8 +207,8 @@
 
         <div class="promo-product">
           <div class="promo-product-slider">
-            <img src="images/promo-products/slider-1.png" width="560" height="560" alt="квадрокоптер c мощным лазером, замаскированным под
-              стандартную камеру">
+            <img src="images/promo-products/slider-1.png" width="560" height="560" alt="Квадрокоптер c мощным лазером, замаскированным под
+              стандартную камеру" .>
           </div>
           <div class="promo-product-content">
             <span class="promo-product-number">01</span>
@@ -160,7 +232,7 @@
         <!--
         <div class="promo-product ">
           <div class="promo-product-slider">
-            <img src="images/promo-products/slider-2.png" width="560" height="560" alt="Фитнес-браслет">
+            <img src="images/promo-products/slider-2.png" width="560" height="560" alt="Фитнес-браслет".>
           </div>
           <div class="promo-product-content">
             <span class="promo-product-number">02</span>
@@ -180,7 +252,7 @@
         <div class="promo-product">
           <div class="promo-product-slider">
             <img src="images/promo-products/slider-3.png" width="560" height="560"
-              alt="Палка для селфи длиной восемь метров и весом всего 5 кг">
+              alt="Палка для селфи длиной восемь метров и весом всего 5 кг".>
           </div>
           <div class="promo-product-content">
             <span class="promo-product-number">03</span>
@@ -233,21 +305,21 @@
           <li class="products-categories-item">
             <a class="products-categories-link" href="#">
               <img class="products-categories-image" src="images/products-categories/product-categorie-1.svg"
-                width="160" height="160" alt="Товары категории Виртуальная реальность">
+                width="160" height="160" alt="Товары категории Виртуальная реальность" .>
               <h3 class="title products-categories-title">Виртуальная реальность</h3>
             </a>
           </li>
           <li class="products-categories-item">
             <a class="products-categories-link" href="#">
               <img class="products-categories-image" src="images/products-categories/product-categorie-2.svg"
-                width="160" height="160" alt="Товары категории Моноподы для селфи">
+                width="160" height="160" alt="Товары категории Моноподы для селфи" .>
               <h3 class="title products-categories-title">Моноподы для селфи</h3>
             </a>
           </li>
           <li class="products-categories-item">
             <a class="products-categories-link" href="#">
               <img class="products-categories-image" src="images/products-categories/product-categorie-3.svg"
-                width="160" height="160" alt="Товары категории Экшн-камеры">
+                width="160" height="160" alt="Товары категории Экшн-камеры" .>
               <h3 class="title products-categories-title">Экшн-камеры</h3>
             </a>
             </div>
@@ -255,21 +327,21 @@
           <li class="products-categories-item">
             <a class="products-categories-link" href="#">
               <img class="products-categories-image" src="images/products-categories/product-categorie-4.svg"
-                width="160" height="160" alt="Товары категории Фитнес-браслеты">
+                width="160" height="160" alt="Товары категории Фитнес-браслеты" .>
               <h3 class="title products-categories-title">Фитнес-браслеты</h3>
             </a>
           </li>
           <li class="products-categories-item">
             <a class="products-categories-link" href="#">
               <img class="products-categories-image" src="images/products-categories/product-categorie-5.svg"
-                width="160" height="160" alt="Товары категории Умные часы">
+                width="160" height="160" alt="Товары категории Умные часы" .>
               <h3 class="title products-categories-title">Умные часы</h3>
             </a>
           </li>
           <li class="products-categories-item">
             <a class="products-categories-link" href="#">
               <img class="products-categories-image" src="images/products-categories/product-categorie-6.svg"
-                width="160" height="160" alt="Товары категории Квадрокоптеры">
+                width="160" height="160" alt="Товары категории Квадрокоптеры" .>
               <h3 class="title products-categories-title">Квадрокоптеры</h3>
             </a>
           </li>
@@ -297,7 +369,7 @@
 
               <div class="services-image">
                 <img class="services-image-1" src="images/services/service-1.svg" width="136" height="164"
-                  alt="Логотип сервиса Доставка">
+                  alt="Логотип сервиса Доставка" .>
               </div>
             </li>
 
@@ -310,7 +382,7 @@
               </div>
               <div class="services-image">
                 <img class="services-image" src="images/services/service-2.svg" width="171" height="195"
-                  alt="Логотип сервиса Гарантия">
+                  alt="Логотип сервиса Гарантия" .>
               </div>
             </li>
 
@@ -322,7 +394,7 @@
               </div>
               <div class="services-image">
                 <img class="services-image" src="images/services/service-3.svg" width="156" height="188"
-                  alt="Логотип сервиса Кредит">
+                  alt="Логотип сервиса Кредит" .>
               </div>
             </li>
           </ul>
@@ -349,7 +421,7 @@
             <p class="title title-advantage">Доставим редкий товар под заказ</p>
 
             <div class="icon-information">
-             <svg aria-hidden="true" focusable="false" width="2" height="12" fill="currentcolor"
+              <svg aria-hidden="true" focusable="false" width="2" height="12" fill="currentcolor"
                 xmlns="http://www.w3.org/2000/svg">
                 <g opacity="0.5" clip-path="url(#a)">
                   <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z" />
@@ -365,7 +437,7 @@
         </a>
       </section>
 
-<!--
+      <!--
       <section class="container">
         <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
         <div class="advantage">
@@ -475,7 +547,7 @@
               fill="#FFC700" />
           </svg>
           <!--<img class="footer-contacts-logo" src="images/logo-yellow.svg" width="145" height="36"
-          alt="Логотип интернет-магазина Device">-->
+          alt="Логотип интернет-магазина Device".>-->
         </a>
 
         <div class="wrapper">
@@ -540,7 +612,7 @@
 
           <div class="footer-right">
             <address class="footer-phone">
-              <a class="text  text-phone text-phone-footer" href="tel:+78128121212">+7 812 812-12-12</a>
+              <a class="text  text-phone text-phone-footer" href="tel:+78128121212">+7 (812) 812-12-12</a>
             </address>
 
             <div class="html-logo">
@@ -550,7 +622,7 @@
                   <path
                     d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 17.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
                 </svg>
-                <!--<img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотин HTML-академии">-->
+                <!--<img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотин HTML-академии".>-->
               </a>
             </div>
           </div>
